# app/Http/Controllers/OpenApiDefinition.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Controllers;
+
+/**
+ * @OA\Info(
+ *   title="API Dokumentasi Kampus",
+ *   version="1.0",
+ *   description="Dokumentasi API untuk manajemen data kampus (dosen dan mahasiswa)"
+ * )
+ * 
+ * @OA\Tag(
+ *   name="Dosen",
+ *   description="Operasi CRUD untuk data dosen"
+ * )
+ * 
+ * @OA\Tag(
+ *   name="Mahasiswa",
+ *   description="Operasi CRUD untuk data mahasiswa"
+ * )
+ */
+class OpenApiDefinition
+{
+    // Class kosong untuk definisi OpenAPI
+}
