# routes/api.php
@@ -3,8 +3,10 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\DosenController;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\MahasiswaController;
 
 Route::middleware('auth.basic')->apiResource('dosen', DosenController::class);
+Route::middleware('auth.basic')->apiResource('mahasiswa', MahasiswaController::class);
 Route::middleware('api.key')->get('/data', function () {
     return response()->json([
         'status' => true,
